--- a/FlashiThings/style.css
+++ b/FlashiThings/style.css
@@ -1,6 +1,6 @@
 /* style.css */
 :root {
-    --primary: #94bfec;
+    --primary:  #5d54b0;
     --secondary: #0c0101;
     --dark: #2c3e50;
     --light: #ecf0f1;
